--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@git-diff-view/core": "^0.0.39",
+    "@git-diff-view/solid": "^0.0.12",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@xterm/addon-fit": "^0.11.0",
@@ -21,7 +23,9 @@
     "solid-js": "^1.9.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
