feat: introduce multi-project support with native folder picker
Replace single projectRoot with a projects list. Each project has an
id, name (derived from folder), and path. Tasks are assigned to a
project on creation and grouped by project in the sidebar.

- Add Project type, projectId on Task/PersistedTask
- Remove global project_root from Rust state; pass per-call instead
- Move persistence to Tauri app data dir (~/.local/share/com.johannes.ai-mush/)
- Add tauri-plugin-dialog for native folder picker
- Add project selector dropdown in NewTaskDialog
- Backward-compatible migration from old projectRoot format

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,4 +27,5 @@ tokio = { version = "1", features = ["full"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 parking_lot = "0.12"
 thiserror = "2"
+tauri-plugin-dialog = "2.6.0"
 
