--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@git-diff-view/core": "^0.0.39",
     "@git-diff-view/solid": "^0.0.12",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/addon-web-links": "^0.12.0",
