feat: add plan review & edit before execution
Watch for plan files in <worktree>/.claude/plans/*.md using the notify
crate. When detected, show a notification banner on the terminal panel.
Users can review/edit the plan in a dialog, then execute it — killing
the current agent and spawning a new one with the edited plan as prompt.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,5 @@ uuid = { version = "1", features = ["v4", "serde"] }
 parking_lot = "0.12"
 thiserror = "2"
 tauri-plugin-dialog = "2.6.0"
+notify = "7"
 
