fix(ci): switch release workflow from pnpm to npm

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,18 +41,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
-      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-          cache: pnpm
+          cache: npm
 
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: src-tauri
 
-      - run: pnpm install
+      - run: npm install
 
       - name: Build and upload
         uses: tauri-apps/tauri-action@v0
@@ -77,11 +76,10 @@ jobs:
           sed -i '' 's/"version": ".*"/"version": "'$VERSION'"/' src-tauri/tauri.conf.json
           sed -i '' '1,/^version = /s/^version = ".*"/version = "'$VERSION'"/' src-tauri/Cargo.toml
 
-      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-          cache: pnpm
+          cache: npm
 
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -90,7 +88,7 @@ jobs:
         with:
           workspaces: src-tauri
 
-      - run: pnpm install
+      - run: npm install
 
       - name: Build and upload
         uses: tauri-apps/tauri-action@v0
