--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ portable-pty = "0.9"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 parking_lot = "0.12"
+base64 = "0.22"
 thiserror = "2"
 tauri-plugin-dialog = "2.6.0"
 tracing = "0.1"
