refactor: replace Tauri shims with direct Electron IPC modules
Remove the @tauri-apps/* shim layer that was left over from the Tauri-to-Electron
migration. Move IPC logic into src/lib/ modules (ipc, window, dialog, shell) with
clear names, update all 15 consuming files, and clean up Vite aliases and tsconfig
path mappings.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,16 +19,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-
-    /* Path aliases */
-    "paths": {
-      "@tauri-apps/api/core": ["./electron/shims/tauri-api-core.ts"],
-      "@tauri-apps/api/window": ["./electron/shims/tauri-api-window.ts"],
-      "@tauri-apps/api/dpi": ["./electron/shims/tauri-api-dpi.ts"],
-      "@tauri-apps/plugin-dialog": ["./electron/shims/tauri-plugin-dialog.ts"],
-      "@tauri-apps/plugin-opener": ["./electron/shims/tauri-plugin-opener.ts"]
-    }
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
