--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "AppImage",
         "deb"
       ],
+      "desktopName": "com.parallel-code.app.desktop",
       "category": "Development"
     },
     "win": {
