fix: address 30 code review issues across security, reliability, and CI
Security: IPC channel allowlist in preload, path validation on all handlers,
PTY command validation, symlink traversal protection, terminal escape sanitization.

Reliability: kill agents on quit, window close deadlock timeout, flush timer
cleanup, channel listener leak fix, closeTerminal race condition guard,
unhandled rejection in close handler, branch restore after merge, async file
reads with size caps, maxBuffer on git commands, process.env undefined filter.

CI/Config: upload .deb artifacts, fix notarization key path, quote shell
variables, remove Windows build config, add typecheck to release script.

Cleanup: remove test.txt, delete unused preload.ts, update stale Tauri refs.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:frontend": "vite build --config electron/vite.config.electron.ts",
     "build": "npm run build:frontend && npm run compile && electron-builder",
     "serve": "vite preview --config electron/vite.config.electron.ts",
-    "release": "npm version patch && git push --follow-tags"
+    "release": "npm run typecheck && npm version patch && git push --follow-tags"
   },
   "license": "MIT",
   "dependencies": {
@@ -65,12 +65,6 @@
           "StartupNotify": "true"
         }
       }
-    },
-    "win": {
-      "target": [
-        "nsis",
-        "portable"
-      ]
     },
     "mac": {
       "target": "dmg",
