--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,9 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          files: release/*.AppImage
+          files: |
+            release/*.AppImage
+            release/*.deb
           draft: true
 
   build-macos:
@@ -60,36 +62,36 @@ jobs:
           DMG_CERT: ${{ secrets.DMG_CERT }}
           DMG_CERT_PWD: ${{ secrets.DMG_CERT_PWD }}
         run: |
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          CERTIFICATE_PATH="$RUNNER_TEMP/build_certificate.p12"
+          KEYCHAIN_PATH="$RUNNER_TEMP/app-signing.keychain-db"
           KEYCHAIN_PWD=$(openssl rand -base64 32)
 
-          echo -n "$DMG_CERT" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$DMG_CERT" | base64 --decode -o "$CERTIFICATE_PATH"
 
-          security create-keychain -p "$KEYCHAIN_PWD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 3600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PWD" $KEYCHAIN_PATH
+          security create-keychain -p "$KEYCHAIN_PWD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 3600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PWD" "$KEYCHAIN_PATH"
 
-          security import $CERTIFICATE_PATH -P "$DMG_CERT_PWD" \
-            -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security import "$CERTIFICATE_PATH" -P "$DMG_CERT_PWD" \
+            -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
 
           security set-key-partition-list -S apple-tool:,apple:,codesign: \
-            -s -k "$KEYCHAIN_PWD" $KEYCHAIN_PATH
+            -s -k "$KEYCHAIN_PWD" "$KEYCHAIN_PATH"
 
-          security list-keychains -d user -s $KEYCHAIN_PATH
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
 
       - name: Prepare API key for notarization
         env:
           APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
         run: |
-          mkdir -p ~/private_keys
-          echo -n "$APPLE_API_KEY" | base64 --decode > ~/private_keys/AuthKey.p8
+          mkdir -p "$RUNNER_TEMP/private_keys"
+          echo -n "$APPLE_API_KEY" | base64 --decode > "$RUNNER_TEMP/private_keys/AuthKey.p8"
 
       - run: npm ci
 
       - name: Build and sign
         env:
-          APPLE_API_KEY: ~/private_keys/AuthKey.p8
+          APPLE_API_KEY: ${{ runner.temp }}/private_keys/AuthKey.p8
           APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
           APPLE_API_ISSUER: ${{ secrets.APPLE_API_ISSUER }}
         run: npm run build -- --universal --publish never
