fix(build): include app icon in packaged resources for Linux
The BrowserWindow icon property was added but the icon.png wasn't
included in the packaged app resources, so it couldn't be found at
runtime. Add extraResources config to copy build/icon.png into the
resources directory where process.resourcesPath resolves it.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,12 @@
     "asarUnpack": [
       "**/node-pty/**"
     ],
+    "extraResources": [
+      {
+        "from": "build/icon.png",
+        "to": "icon.png"
+      }
+    ],
     "linux": {
       "target": [
         "AppImage",
