--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "solid-js": "^1.9.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.3",
     "@types/node": "^25.3.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "concurrently": "^9.2.1",
     "electron": "^40.6.0",
     "electron-builder": "^26.8.1",
+    "eslint": "^9.39.3",
+    "eslint-plugin-solid": "^0.14.5",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.56.0",
     "vite": "^7.3.1",
     "vite-plugin-solid": "^2.11.10",
     "wait-on": "^9.0.4"
