chore: add lint, format, and check npm scripts

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "build:frontend": "vite build --config electron/vite.config.electron.ts",
     "build": "npm run build:frontend && npm run compile && electron-builder",
     "serve": "vite preview --config electron/vite.config.electron.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\" \"electron/**/*.ts\" \"*.{js,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\" \"electron/**/*.ts\" \"*.{js,json,md}\"",
+    "check": "npm run typecheck && npm run lint && npm run format:check",
     "release": "npm run typecheck && npm version patch && git push --follow-tags"
   },
   "license": "MIT",
