--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "typecheck": "tsc --noEmit",
     "compile": "tsc -p electron/tsconfig.json",
     "build:frontend": "vite build --config electron/vite.config.electron.ts",
-    "build": "npm run build:frontend && npm run compile && electron-builder",
+    "build:remote": "vite build --config src/remote/vite.config.ts",
+    "build": "npm run build:frontend && npm run build:remote && npm run compile && electron-builder",
     "serve": "vite preview --config electron/vite.config.electron.ts",
     "lint": "eslint . --max-warnings 21",
     "lint:fix": "eslint . --fix",
@@ -31,11 +32,15 @@
     "@xterm/addon-webgl": "^0.19.0",
     "@xterm/xterm": "^6.0.0",
     "node-pty": "^1.1.0",
-    "solid-js": "^1.9.11"
+    "qrcode": "^1.5.4",
+    "solid-js": "^1.9.11",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.3",
     "@types/node": "^25.3.0",
+    "@types/qrcode": "^1.5.6",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/parser": "^8.56.0",
     "concurrently": "^9.2.1",
     "electron": "^40.6.0",
@@ -60,6 +65,7 @@
     "files": [
       "dist/**/*",
       "dist-electron/**/*",
+      "dist-remote/**/*",
       "electron/preload.cjs"
     ],
     "asarUnpack": [
